# TransacaoFinanceira-desafio

./: .gitignore  README.md  pyproject.toml  requirements.txt
transacao_financeira/: logging_config.py  main.py
transacao_financeira/domain/: entities.py  exceptions.py
transacao_financeira/repository/: in_memory.py  interfaces.py
transacao_financeira/services/: transferencia.py
transacao_financeira/tests/: test_repository.py  test_transferencia.py
