[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "transacao-financeira"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["python-json-logger>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["transacao_financeira/tests"]